# verdikta-sdk-v2

./: .gitignore  LICENSE  README.md  SUBMISSION.md  pyproject.toml
examples/: discover_open_bounties.py  monitor_evaluation.py  submit_work.py
tests/: test_client.py
verdikta_sdk/: __init__.py  client.py  errors.py  types.py
